--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -9,6 +9,9 @@
 {{- if .git.signingkey }}
 [gpg]
   format = ssh
+  {{- if .onepassword.enabled }}
+  ssh.program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
+  {{- end }}
 {{- end }}
 
 [core]
