fix: correct git SSH signing configuration syntax
- Use proper [gpg "ssh"] section syntax instead of gpg.ssh.program
- Ensures git config is valid and 1Password signing works correctly

--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -9,9 +9,13 @@
 {{- if .git.signingkey }}
 [gpg]
   format = ssh
-  {{- if .onepassword.enabled }}
-  ssh.program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
-  {{- end }}
+{{- end }}
+
+{{- if .git.signingkey }}
+{{- if .onepassword.enabled }}
+[gpg "ssh"]
+  program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
+{{- end }}
 {{- end }}
 
 [core]
