refactor(fish/zsh): consolidate Go environment configuration
Move Go-related environment variables and PATH modifications to conditional blocks
Remove duplicate Go PATH additions and centralize configuration in language-specific files

--- a/home/dot_config/fish/conf.d/20-languages.fish.tmpl
+++ b/home/dot_config/fish/conf.d/20-languages.fish.tmpl
@@ -24,6 +24,7 @@ end
 if type -q go
     set -gx GOROOT (go env GOROOT)
     set -gx GOPATH {{ .chezmoi.homeDir }}/.go
+    set -gx GOBIN {{ .chezmoi.homeDir }}/.go/bin
     fish_add_path --global {{ .chezmoi.homeDir }}/.go/bin
 end
 
